fixed swiper z-index with menu

--- a/src/scss/components/_meeting-rooms.scss
+++ b/src/scss/components/_meeting-rooms.scss
@@ -1,6 +1,10 @@
 .meeting-rooms {
   padding: var(--part-offset) 0;
 
+  &__slider {
+    z-index: -1;
+  }
+
   &__other {
     margin-bottom: 16px;
   }
